 - removed unused module for fixing Illumina config files
 - removed unused module for LSF job creation for tag deplexing -
   this is now done within p4 stage 1
 - removed unused implementation for function copy_interop_files_to_irods
 - removed unused spatial_filter, fix_broken_files and force_phix_split flags
 - removed a number of unused methods in npg_pipeline::base

release 51.12.2
 - fixed lane taglist files for TraDIS libraries
     no longer pad spiked phix tag simply add missing i5 tag for dual index runs
 - update p4 stage defaul values in general_values.ini
     p4_stage1_memory=20000, +p4_stage1_slots=8, +p4_stage1_i2b_thread_count=8

release 51.12.1
 - tweak to GbS library type check in seq_alignment.pm as arrived as GBS (now case-insensitive).

release 51.12.0
 - Travis CI build - add iRODS test server
 - run_is_deletable script moved to this package from data_handling,
     custom conversion between run id and run folder path refactored to use
     npg_tracking::illumina::runfolder,
     lims-driver-type argument is added to reset the default samplesheet driver type,
     iRODS build is added to Travis CI configuration to enable all new tests to run,
     Log::Log4perl is used for logging
 - added support for GbS processing
 - travis build tweak for npg_qc

release 51.11.3
 - seq_alignment: fixes for no target alignment and no target alignment+non-consented human split 

release 51.11.2
 - use align_intfile_opt=1 when aligning with star to produce intermediate bam file
 - by default, force bambi i2b to single-threading (general_values parameter available for override)

release 51.11.1
 - Handle dual indexes (create new format lane tag files)
 - remove remaining broken provisions for xml LIMs driver 
 - use the new log publisher
 - now allows XA/Y-split with no target alignment

release 51.11.0
 - added support for RNA analysis/quantification using STAR and salmon